README memory usage: Clarify for gradle (issue #3)